objects/SurveyHistory__c.object
<CustomObject>
    <description>C&amp;E Object</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>C&amp;E field
Survey History</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey History</relationshipLabel>
        <relationshipName>Survey_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>C&amp;E field</description>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Danfoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>C&amp;E field
Survey History</description>
        <label>Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>C&amp;E Field.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey History</relationshipLabel>
        <relationshipName>Survey_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>C&amp;E field</description>
        <label>Danfoss Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Danfoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Employee_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>C&amp;E field
Survey History</description>
        <label>Employee Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_External_Key__c</fullName>
        <externalId>true</externalId>
        <label>SAP External Key</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>C&amp;E field
Survey History</description>
        <label>Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>C&amp;E field</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <description>C&amp;E field</description>
        <label>Survey Type</label>
        <picklist>
            <picklistValues>
                <fullName>CLI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Year__c</fullName>
        <description>C&amp;E field
Survey hsitory</description>
        <label>Survey Year</label>
        <picklist>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Survey History</label>
    <nameField>
        <label>Survey History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>